kubernetes/apps/app-cluster/media/radarr/config/http-route-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr-internal
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: kubernetes.krapulax.home
    gethomepage.dev/description: "Movie library automation (internal)"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "App Cluster - media"
    gethomepage.dev/href: "http://radarr.krapulax.home"
    gethomepage.dev/icon: "radarr.png"
    gethomepage.dev/name: "Radarr (internal)"
    gethomepage.dev/weight: "10"
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: http
  hostnames:
    - radarr.krapulax.home
  rules:
    - backendRefs:
        - name: radarr
          namespace: media
          port: 7878
