kubernetes/apps/app-cluster/media/radarr/config/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/hostname: radarr.krapulax.dev
    external-dns.alpha.kubernetes.io/target: external-apps.krapulax.dev
    gethomepage.dev/description: "Movie library automation"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "App Cluster - media"
    gethomepage.dev/href: "https://radarr.krapulax.dev"
    gethomepage.dev/icon: "radarr.png"
    gethomepage.dev/name: "Radarr"
    gethomepage.dev/weight: "40"
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - radarr.krapulax.dev
  rules:
    - backendRefs:
        - name: radarr
          namespace: media
          port: 7878
